css/global.css
/* ... */
#FilterNodeOptions .FilterItemContainer > label { width: 150px; }.tag-editor li { padding: initial; }

/* Pill-like display for keywords */
.ResponsiveViewFullSite { display: none; }
.Question .customFieldLabel {
    float:none;
    border-radius:4px;
    padding:3px 6px;
    margin-left:5px;
}

.keywordselected {
    display: inline-block;
    margin: 0 5px 5px 0;
    float: none;
    border-radius: 4px;
    padding: 2px 6px;
    line-height: 20px;
}
.customFieldset input[type=checkbox] {margin:0 2px 0 0;}
.keywordselected a {padding-left:8px;}
.RemoveKeyword {font-weight: bold; font-size: 1.2em;}

#photoholder {  
    margin-top: 15px;
}


#PreviewTools {
    height: 41px;
    width: 100%;
    position: absolute;
    bottom: 0px;
    z-index: 1;
}

#PreviewToolsOptionsWrapper {
    height: 100%;
    background: rgba(0, 0, 0, 0.65);
    color: #FFF;
    font-size: 26px;
}

.ToolsOptionLink {
    float: right;
    margin: 5px 10px 0px 0px;
}

.ToolsOptionLink:link, .ToolsOptionLink:visited {
    color: #FFF;
}

.ToolsOptionLink:hover {
    color: #79BC41;
    text-decoration: none;
}

.ToolsOptionLink.Enabled {
    color: #79BC41;
}

a.Enabled, a:visited.Enabled {
    color: #79BC41;
    text-decoration: underline;
}

.checkselect {float:left;padding-left:5px;}

.ResourcePanelResourceID {float:left;}

#Metadata {
    background-color: #FFF;
    border-radius: 4px;
    margin-bottom: 10px;
    padding-bottom: 8PX;
}

.ReportSheet {padding:10px;}
.ReportSummary td {padding:10px;}
.ReportMetric {font-size:200%;padding-left:5px;}
.ReportAddToDash {font-size:65%;}

#modal #CentralSpaceResources {padding:20px;} /* extra spacing needed when results displayed in a modal - e.g. geographical search */

.ListTools a, .SingleLine {
    white-space: nowrap;
}
.TableOrderBy {
    width:100px;
}


/* Breadcrumbs */
.BreadcrumbsBox {
    display: table;
    border-radius: 6px;
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    margin: 1em 1em 0.8em 0em;;
    padding: 8px 10px;
    background: gray;
}
.BreadcrumbsBox > .SearchBreadcrumbs{
    margin: 0;
}
.BreadcrumbsBox .fa {
    padding-left: 10px;
    padding-right: 3px;
}

/* Colour picker */
#tile_style_colour {
    display: none;
}

.lockedQuestion .fieldset, .lockedQuestion table, .lockedQuestion input, .lockedQuestion select, .lockedQuestion textarea, .lockedQuestion .keywordselected, .lockedQuestion .CategoryBox{
   font-weight: bold;
}

.lock_icon {
    float: right;
    height: 30px;
}

/* jQuery UI */
.ui-menu-item {
    text-align: left;
}

.HeaderSearchForm {padding:0;margin:0;display:inline;}
.NoSearchBar {padding-right:0 !important;}

#OverFlowLinks {
    margin: 5px;
    padding: 5px;
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.93), rgba(0, 0, 0, 0.93), rgba(0, 0, 0, 0.93), rgba(0, 0, 0, 0.93), rgba(0, 0, 0, 0.93));
    display: none;
    position: absolute;
    right: 100px;
    border-radius: 0 0 4px 4px;
    z-index: 500;
}

#HiddenLinks li {
    display: block;
}

.HelpHeader {
    margin-bottom: 20px;
}

#modal #SearchBox, #modal #SearchBoxPanel {
    margin: 0;
}

#Header #ssearchbox {
    margin-top: 0;
    width: 250px;
    background-color: rgba(255, 255, 255, 0.9);
}

#previewimage {
    max-height: 600px;
}

#preview {
    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
    max-height: 250px;
}

/* Configuration options */
select.MultiSelect {
    padding: 0;
    height: auto;
    background-image: none;
    box-shadow: none;
}
select.MultiSelect:before {
    content: unset;
}
.MultiRTypeSelect {
    background-color: #fff;
    width: 292px;
    padding: 3px;
    border: 1px solid rgba(0,0,0,0.25);
    border-radius: 4px;
}
.RecordPanel .RecordDownloadSpace .DownloadDBlend .AltThumbLink {
    min-height: unset;
    padding: 0;
}

#ResourceToolsContainer h2 {
    margin-bottom: 6px;
}

.MultiLine {
    padding-top: 5px;
}

.searchcrumbs{
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

#previewimage.NoPreview {
    box-shadow: none;
}

/* Browse Bar */
#BrowseBarContainer {
    overflow: hidden;
    white-space: nowrap;
}
#BrowseBar {
    text-align: left;
    white-space: nowrap;
    height: 100%;
    float: left;
}
#BrowseBarContent {
    height: 100%;
    float: left;
    overflow-x: hidden;
    overflow-y: auto;
    min-width: 265px;
}
.BrowseBarStructure {
    display: table-cell;
    min-width: 6px;
    font-family: "Font Awesome 5 Free";
    font-weight: 600;
    padding-left: 10px;
    padding-top: 2px;
    padding-bottom: 2px;
}
.BrowseRowInner {
    display: table-row;
}
.BrowseBarExpand + a .BrowseTypeNode, .BrowseBarExpand + a .BrowseTypeRestype, .BrowseBarExpand + .BrowseTypeField, .BrowseBarExpand + a .BrowseTypeFeatured{
    padding-left: 5px;
}
.BrowseLine + .BrowseTypeNode, .BrowseLine + .BrowseTypeRestype, .BrowseLine + .BrowseTypeField, .BrowseLine + .BrowseTypeNew{
    padding-left: 6px;
}
.BrowseBarLink{
    display: table-cell;
    white-space: normal;
    padding-left: 4px;
    font-size: 90%;
}
#BrowseBar .BrowseLine {
    border-right: 1px solid;
    width: 6px;
}
#BrowseBarTabContainer{
    display: inline-block;
    right: 0px;
    height: 100%;
}
#BrowseBarTab {    
    position: relative;
    float: right;
    top: 130px;
    width:0px;
    height: 140px;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    width: 30px;
}
.BrowseBarTabText {
    margin-bottom: 10px;
    margin-left: 26px;
    padding-top: 80px;
    text-transform: capitalize;
    text-align: center;
    transform: rotate(-90deg);
    transform-origin: left bottom;
    font-size: 1.2em;
}
#BrowseBarContainer a:hover, .BrowseBarItem a:hover, #BrowseBarContainer a:visited, .BrowseBarItem a:visited{
    text-decoration: none;
    cursor: pointer;
    opacity: 1;
}
.BrowseTypeRestype:after, .BrowseTypeField:after, .BrowseTypeFeatured:after{
    content: "\f07b";
}
/* ... */

